unpackaged/main/default/objects/adroll__AdRollABMSettings__c/adroll__AdRollABMSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings used to Control the RollWorks Account Based Marketing Package</description>
    <label>RollWorks Acct Based Marketing Settings</label>
</CustomObject>