unpackaged/main/default/objects/adroll__AdRollABMSettings__c/fields/adroll__AccountTrackingDataBatchSize__c.field-meta.xml
<CustomField>
    <fullName>adroll__AccountTrackingDataBatchSize__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Account Tracking Data Batch Size</description>
    <inlineHelpText>Account Tracking Data Batch Size</inlineHelpText>
    <label>Account Tracking Data Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>