unpackaged/main/default/objects/adroll__AdRollABMSettings__c/fields/adroll__Advertisable_ID__c.field-meta.xml
<CustomField>
    <fullName>adroll__Advertisable_ID__c</fullName>
    <description>Stores the Org Advertisable ID once an OAuth connection has been made</description>
    <label>Advertisable ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>