unpackaged/main/default/objects/adroll__AdRollABMSettings__c/fields/adroll__DeleteSegmentMembersBatchSize__c.field-meta.xml
<CustomField>
    <fullName>adroll__DeleteSegmentMembersBatchSize__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Batch Size for Delete Segments Operation</description>
    <inlineHelpText>Batch Size for Delete Segments Operation</inlineHelpText>
    <label>Delete Segment Members Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>