unpackaged/main/default/objects/adroll__AdRollABMSettings__c/fields/adroll__FullRefreshOfSegmentMembers__c.field-meta.xml
<CustomField>
    <fullName>adroll__FullRefreshOfSegmentMembers__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this value is Checked then the list of Segment Members is delete and repopulated by querying the Contact, Lead, Opportunity, and Campaign Member objects. If unchecked, only the records that have been modified since the last run will be included. However this will not remove previously included records that should no longer be included.</description>
    <inlineHelpText>If this value is Checked then the list of Segment Members is delete and repopulated by querying the Contact, Lead, Opportunity, and Campaign Member objects. If unchecked, only the records that have been modified since the last run will be included. Howeve</inlineHelpText>
    <label>Full Refresh of Segment Members</label>
    <type>Checkbox</type>
</CustomField>