unpackaged/main/default/objects/adroll__AdRollABMSettings__c/fields/adroll__Last_API_Call_in_Time__c.field-meta.xml
<CustomField>
    <fullName>adroll__Last_API_Call_in_Time__c</fullName>
    <description>Last contact made by the RollWorks ABM Api</description>
    <label>Last API Call-in Time</label>
    <type>DateTime</type>
</CustomField>