unpackaged/main/default/objects/adroll__AdRollABMSettings__c/fields/adroll__PartialRefreshOfSegmentMembers__c.field-meta.xml
<CustomField>
    <fullName>adroll__PartialRefreshOfSegmentMembers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this value is Checked then the list of Segment Members updated by querying the Contact, Lead, Opportunity, and Campaign Member objects with records that have been modified since the last run will be included. However this will not remove previously included records that should no longer be included.</description>
    <inlineHelpText>If this value is Checked then the list of Segment Members updated by querying the Contact, Lead, Opportunity, and Campaign Member objects with records that have been modified since the last run will be included.</inlineHelpText>
    <label>Partial Refresh of Segment Members</label>
    <type>Checkbox</type>
</CustomField>