unpackaged/main/default/objects/adroll__AdRollABMSettings__c/fields/adroll__SegmentBatchSize__c.field-meta.xml
<CustomField>
    <fullName>adroll__SegmentBatchSize__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Batch Size for Segment Processing</description>
    <inlineHelpText>Batch Size for Segment Processing</inlineHelpText>
    <label>Segment Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>