unpackaged/main/default/objects/adroll__AdRollABMSettings__c/fields/adroll__SuppressAutoSchedule__c.field-meta.xml
<CustomField>
    <fullName>adroll__SuppressAutoSchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked the Auto Scheduling of Segment Creation will be suppressed. Otherwise it will be auto created</description>
    <inlineHelpText>If checked the Auto Scheduling of Segment Creation will be suppressed. Otherwise it will be auto created</inlineHelpText>
    <label>Suppress Auto Schedule</label>
    <type>Checkbox</type>
</CustomField>