unpackaged/main/default/objects/adroll__AdRollABMSettings__c/fields/adroll__TrackingDataBatchSize__c.field-meta.xml
<CustomField>
    <fullName>adroll__TrackingDataBatchSize__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Batch Size for Tracking Data Process</description>
    <inlineHelpText>Batch Size for Tracking Data Process</inlineHelpText>
    <label>Tracking Data Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>