unpackaged/main/default/objects/adroll__AdRollABMSettings__c/fields/adroll__TrackingDataResetBatchSize__c.field-meta.xml
<CustomField>
    <fullName>adroll__TrackingDataResetBatchSize__c</fullName>
    <defaultValue>200</defaultValue>
    <label>Tracking Data Reset Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>