unpackaged/main/default/objects/adroll__AdRollABMSettings__c/fields/adroll__TrackingDataTimeFrame__c.field-meta.xml
<CustomField>
    <fullName>adroll__TrackingDataTimeFrame__c</fullName>
    <defaultValue>40</defaultValue>
    <description>Time frame (days) for which to aggregate tracking data.</description>
    <inlineHelpText>Time frame (days) for which to aggregate tracking data.</inlineHelpText>
    <label>Tracking Data Timeframe (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>